Fix sizing issues on Standings page. No more scrollbar on large displays

--- a/src/app/Standings/StandingsPage.module.css
+++ b/src/app/Standings/StandingsPage.module.css
@@ -2,7 +2,7 @@
 .userContainer {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100%;
   width: 100%;
   padding: 0;
   background-color: #f0f0f0;
